Implement Module management logic
