# backend/src/Entity/Server.php
@@ -210,7 +210,8 @@ class Server implements DepthAwareNormalizableInterface
         return $this;
     }
 
-    #[Serializer\Ignore]
+    #[Serializer\Groups(['short', 'long'])]
+    #[Serializer\SerializedName('created_by_entity')]
     public function getCreatedBy(): ?User
     {
         return $this->createdBy;
